api/swim_form/src/tests/derive/form/newtype_multi_field_struct.stderr
error: Cannot apply `newtype` attribute to a struct with multiple fields
  --> src/tests/derive/form/newtype_multi_field_struct.rs:6:5
   |
6  | /     #[form(newtype)]
7  | |     struct A{
8  | |         a: i32,
9  | |         b: i32,
10 | |         #[form(skip)]
11 | |         c: i32,
12 | |     }
   | |_____^
